--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 proj0/grade.txt
 proj1/grade.txt
+proj2/grade.txt
+proj3/grade.txt
+proj4/grade.txt
+proj5/grade.txt
+proj6/grade.txt
 quiz1/quiz1.txt
+quiz2/quiz2.txt
+quiz3/quiz3.txt
